[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "visiomatic"
version = "3.0"
description = "A web application for visualizing astronomical images"
authors = [
    {name = "Emmanuel Bertin", email = "bertin@cfht.hawaii.edu"},
]
keywords = ["astronomy", "CFHT", "imaging"]
readme = "README.md"
license = {text = "MIT"}
license_files = ["LICENSE"]
data_files = ["config/visiomatic.conf"]
dependencies = [
    "astropy >= 5.0",
    "atomics >= 1.0",
    "fastapi >= 0.74",
    "jinja2 >= 3.1.2",
    "joblib >= 1.0",
    "methodtools >= 0.4.7",
    "numpy >= 1.19",
    "opencv-python >= 4.5",
    "orjson >= 3.9.0",
    "platformdirs >= 3.4.0",
    "posix_ipc >= 1.1.0",
    "pydantic == 1.*",
    "scikit-image >= 0.19",
    "simplejpeg >= 1.6",
    "tiler >= 0.5",
    "ultradict >= 0.0.6",
    "uvicorn[standard] >= 0.18",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.scripts]
visiomatic = "visiomatic.cmd.start:main"

[project.urls]
Repository = "https://github.com/ebertin/visiomatic-server"
Homepage = "https://visiomatic.org"
Documentation = "https://ebertin.github.io/visiomatic-server/"

