[metadata]
name = visiomatic-server
version = attr: visiomatic.__version__
author = Emmanuel Bertin (IAP/CNRS/SorbonneU/CFHT)
author_email = bertin@cfht.hawaii.edu
description = An IIIF compliant web astronomical image server
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, CFHT, imaging
license = MIT
license_files = LICENSE
url = https://github.com/ebertin/visiomatic-server
project_urls =
    Source = https://github.com/ebertin/visiomatic-server
    Documentation = https://ebertin.github.io/visiomatic-server/
    Bug Tracker = https://github.com/ebertin/visiomatic-server/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
zip_safe=False
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
        aiosqlite
        astropy>=5.0
        fastapi>=0.74
        numpy>=1.19
        opencv-python>=4.5
        tiler>=0.5
        uvicorn[standard]>=0.18

[options.packages.find]
where = src

[options.package_data]

